@@ -1,0 +1,2 @@
+# Do you accept the Wolfram - Raspberry Pi® Bundle License Agreement?
+wolfram-engine  shared/accepted-wolfram-eula    boolean true
