@@ -1,2 +1,2 @@
 NOOBS_NAME="Raspbian Lite"
-NOOBS_DESCRIPTION="A port of Debian Stretch for the Raspberry Pi (minimal version)"
+NOOBS_DESCRIPTION="A port of Debian with no desktop environment"
