@@ -1,6 +1,4 @@
 hunspell-en-gb
 hyphen-en-gb
-libreoffice-help-en-gb
-libreoffice-l10n-en-gb
 wamerican
 wbritish
