@@ -1,0 +1,13 @@
+python3-thonny
+sonic-pi
+scratch nuscratch scratch2
+smartsim
+
+minecraft-pi python-minecraftpi
+python-sense-emu sense-emu-tools python-sense-emu-doc
+
+wolfram-engine
+claws-mail
+greenfoot bluej
+nodered
+realvnc-vnc-viewer
