@@ -1,0 +1,3 @@
+libreoffice-sdbc-hsqldb
+libreoffice-help-en-gb
+libreoffice-l10n-en-gb
