@@ -1,0 +1,5 @@
+***REMOVED***
+
+if [ ! -d "${ROOTFS_DIR***REMOVED***" ]; then
+	copy_previous
+fi
